# adventofcode2022-rust

./: Cargo.toml
day1/src/: main.rs
day2/src/: main.rs
