[package]
name = "adventofcode-rust-wradkiewicz"
version = "0.1.0"
authors = ["wyatt-radkiewicz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day2"
path = "day2/src/main.rs"

[workspaces]
members = [
    "day1",
    "day2"
]

[dependencies]
